--- a/app/views/oldchunks/edit_oldchunk.erb
+++ b/app/views/oldchunks/edit_oldchunk.erb
@@ -1,9 +1,11 @@
-<h2>Source Scene Edit</h2>
-<form method="post" action="/oldchunks/<%= @oldchunk.id %>">
+<div>Source Scene Edit</div>
+
+<div><form method="post" action="/oldchunks/<%= @oldchunk.id %>">
   
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <input type="text" name="title" value="<%= @oldchunk.title %>"><br>
-  <textarea type="text" name="text" value="<%= oldchunk.text.gsub(/\n/, '<br/>') %>">
+  <textarea type="text" name="text" value="<%= h(oldchunk.text).gsub(/\n/, '<br/>') %>">
   <input type="submit" id="submit" value="submit" class="btn btn-primary">
 
 </form>
+</div>
